@@ -82,20 +82,20 @@ namespace Marvel {
 		MV_END_COLOR_CONSTANTS
 
 		MV_START_STYLE_CONSTANTS
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_BorderSize			, 0,    1),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_Rounding			, 0,   12),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_PaddingX			, 4,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_PaddingY			, 3,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropPaddingX		, 8,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropPaddingY		, 8,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropBorderSize		, 1,    1),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropRounding		, 0,   12),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ItemSpacingX		, 8,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ItemSpacingY		, 4,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ScrollbarSize		,14,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ScrollbarRounding	, 9,   12),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_TextAlignX			, 0.5, 20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_TextAlignY			, 0.5, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_BorderSize			, 0,  1),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_Rounding			, 0, 12),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_PaddingX			, 4, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_PaddingY			, 3, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropPaddingX		, 8, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropPaddingY		, 8, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropBorderSize		, 1,  1),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_DropRounding		, 0, 12),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ItemSpacingX		, 8, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ItemSpacingY		, 4, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ScrollbarSize		,14, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_ScrollbarRounding	, 9, 12),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_TextAlignX			, 0, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Combo_TextAlignY			, 0, 20),
 		MV_END_STYLE_CONSTANTS
 
 	public:
