@@ -595,7 +595,8 @@ namespace Marvel {
 
 	void mvDataGrid::draw()
 	{
-		//mvImGuiThemeScope scope(this);
+		ScopedID id;
+		mvImGuiThemeScope scope(this);
 
 		if (ImGui::BeginTable(m_core_config.name.c_str(), m_columns,
 			ImGuiTableFlags_Hideable | ImGuiTableFlags_Resizable | ImGuiTableFlags_RowBg | ImGuiTableFlags_Borders))
