@@ -67,8 +67,8 @@ namespace Marvel {
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ItemSpacingY			, 4,   20),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalRounding			, 0,   12),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalBorderSize			, 1,    1),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalTitleAlignX		, 0,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalTitleAlignY		, 0.5, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalTitleAlignX		, 0,    1),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalTitleAlignY		, 0.5,  1),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalMinSizeX			,32,   50),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalMinSizeY			,32,   50),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Popup_ModalScrollbarSize		,14,   20),
