@@ -102,8 +102,8 @@ namespace Marvel {
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_Rounding			, 0,   12),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_MinSizeX			,32,   50),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_MinSizeY			,32,   50),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_TitleAlignX		, 0,   20),
-			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_TitleAlignY		, 0.5, 20),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_TitleAlignX		, 0,    1),
+			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_TitleAlignY		, 0.5,  1),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_PaddingX			, 8,   20),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_PaddingY			, 8,   20),
 			MV_CREATE_CONSTANT_TUPLE(mvThemeStyle_Window_ItemSpacingX		, 8,   20),
